2003-09-22  Adan Trinidad <adan.trinidad@softtek.com>

	* printer/HP-DeskJet_5150.xml: Added the HP DeskJet 5150
	  device.

	* printer/HP-DeskJet_5652.xml: Added the HP DeskJet 5652
	  device.

2003-09-07  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-LaserJet_1200.xml: Changed recommended driver to
	  "pxlmono", updated text.

	* printer/Olympus-P-300E.xml, printer/Olympus-P-300NE.xml,
	  printer/Olympus-P-300U.xml, printer/Olympus-P-400.xml,
	  printer/Canon-CP-100.xml: Added dye-sublimation photo printers.

	* printer/Epson-Stylus_C83.xml, printer/Epson-Stylus_C84.xml:
	  Added new Epson printers.

	* printer/Canon-BJ-30.xml, printer/Canon-BJC-1000.xml,
	  printer/Canon-BJC-2000.xml, printer/Canon-BJC-2010.xml,
	  printer/Canon-BJC-210.xml, printer/Canon-BJC-2100.xml,
	  printer/Canon-BJC-2110.xml, printer/Canon-BJC-240.xml,
	  printer/Canon-BJC-250.xml, printer/Canon-BJC-3000.xml,
	  printer/Canon-BJC-4300.xml, printer/Canon-BJC-4400.xml,
	  printer/Canon-BJC-50.xml, printer/Canon-BJC-55.xml,
	  printer/Canon-BJC-6000.xml, printer/Canon-BJC-6100.xml,
	  printer/Canon-BJC-6200.xml, printer/Canon-BJC-6500.xml,
	  printer/Canon-BJC-7000.xml, printer/Canon-BJC-7100.xml,
	  printer/Canon-BJC-80.xml, printer/Canon-BJC-85.xml,
	  printer/Canon-S100.xml, printer/Canon-S300.xml,
	  printer/Canon-S400.xml, printer/Canon-S450.xml,
	  printer/Canon-S4500.xml, printer/Canon-S500.xml,
	  printer/Canon-S800.xml, printer/Epson-CL_700.xml,
	  printer/Epson-CL_750.xml, printer/Epson-CL_760.xml,
	  printer/Epson-EM_900C.xml, printer/Epson-EM_900CN.xml,
	  printer/Epson-EM_930C.xml, printer/Epson-EM_930CN.xml,
	  printer/Epson-MC_10000.xml, printer/Epson-MC_2000.xml,
	  printer/Epson-MC_5000.xml, printer/Epson-MC_7000.xml,
	  printer/Epson-MC_9000.xml, printer/Epson-MJ_5100C.xml,
	  printer/Epson-MJ_6000C.xml, printer/Epson-MJ_8000C.xml,
	  printer/Epson-MJ_930C.xml, printer/Epson-PM_10000.xml,
	  printer/Epson-PM_2000C.xml, printer/Epson-PM_2200C.xml,