@@ -322,6 +322,9 @@
    <id>printer/HP-LaserJet_6P</id><!-- HP LaserJet 6P -->
   </printer>
   <printer>
+   <id>printer/HP-LaserJet_1015</id><!-- HP LaserJet 1015 -->
+  </printer>
+  <printer>
    <id>printer/HP-LaserJet_1100</id><!-- HP LaserJet 1100 -->
   </printer>
   <printer>
