@@ -1,0 +1,50 @@
+<printer id="printer/HP-LaserJet_1012">
+  <make>HP</make>
+  <model>LaserJet 1012</model>
+  <mechanism>
+    <laser/><!--not "color"-->
+    <resolution>
+      <dpi>
+        <x>600</x>
+        <y>600</y>
+      </dpi>
+    </resolution>
+    <consumables>
+      <comments>
+        <en>Cartridge containing toner and imaging drum</en>
+      </comments>
+    <!--one or more "partno" elements.--></consumables>
+  </mechanism>
+  <url></url>
+  <lang>
+    <proprietary/>
+  <!--no pjl--><!--No "text"?--></lang>
+  <autodetect>
+  <!--no known parport probe information--></autodetect>
+  <functionality>F</functionality>
+  <driver></driver>
+  <!--no "contrib_url"-->
+  <comments>
+    <en>
+
+    Cheap, compact desktop laser printer, foldable tray for 150
+    sheets, A4/Letter/Legal, up to 14 pages/min. Somewhat faster than
+    the LaserJet 1010, "Fastres 1200" resolution enhancement.&lt;p&gt;
+
+    Seems not to understand any standard language. There is no report
+    about this printer working on a GNU/Linux or Unix system and HP
+    classifies it as "host-based".&lt;p&gt;
+
+    Rick Richardson (rickr at mn dot rr dot com), author of the
+    &quot;foo2zjs&quot; driver (driver for the HP LaserJet 1000/1005),
+    has examined the output of the Windows driver for this printer and
+    found out that the language looks like PCL + PCL 6/XL (see report
+    on the HP forum on linuxprinting.org). Probably the printer
+    understands a stripped-down PCL 6 without text capabilities. So it
+    would be interesting to try this printer with the
+    "lj5gray"/"lj5mono" drivers (NOT the "pxlmono" driver, because
+    "pxlmono" is a vector driver which sends text as text).&lt;p&gt;
+
+    </en>
+  </comments>
+</printer>
