@@ -1,0 +1,46 @@
+<printer id="printer/HP-LaserJet_1012">
+  <make>HP</make>
+  <model>LaserJet 1012</model>
+  <mechanism>
+    <laser/><!--not "color"-->
+    <resolution>
+      <dpi>
+        <x>600</x>
+        <y>600</y>
+      </dpi>
+    </resolution>
+    <consumables>
+      <comments>
+        <en>Cartridge containing toner and imaging drum</en>
+      </comments>
+    <!--one or more "partno" elements.--></consumables>
+  </mechanism>
+  <url></url>
+  <lang>
+    <pcl level="5e" />
+    <proprietary/>
+    <pjl/>
+    <text>
+      <charset>us-ascii</charset>
+    </text>
+  </lang>
+  <autodetect>
+  <!--no known parport probe information--></autodetect>
+  <functionality>A</functionality>
+  <driver>hpijs</driver>
+  <!--no "contrib_url"-->
+  <comments>
+    <en>
+
+    Cheap, compact desktop laser printer, foldable tray for 150
+    sheets, A4/Letter/Legal, up to 14 pages/min. Somewhat faster than
+    the LaserJet 1010, "Fastres 1200" resolution enhancement.&lt;p&gt;
+
+    In contrary to the LaserJet 1010/1012 this printer understands PCL 5e
+    and is therefore compatible to many older HP laser printers as the
+    LaserJet 4 or LaserJet 1100. So it can be used with standard drivers
+    as HPIJS, GIMP-Print, or "ljet4".&lt;p&gt;
+
+    </en>
+  </comments>
+</printer>
