@@ -1,3 +1,9 @@
+2003-09-24  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* printer/HP-LaserJet_1010.xml, printer/HP-LaserJet_1012.xml,
+	  printer/HP-LaserJet_1015.xml, driver/ljet4.xml: Added HP
+	  LaserJet 1010, 1012, and 1015.
+
 2003-09-22  Adan Trinidad <adan.trinidad@softtek.com>
 
 	* printer/HP-DeskJet_5150.xml: Added the HP DeskJet 5150
